--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Login Juansubas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="login">
@@ -12,13 +14,13 @@
         <form>
             <!--USERNAME-->
             <label for="username">Username</label>
-            <input type="text" placeholder="Enter Username">
+            <input class="form-control" type="text" placeholder="Enter Username">
 
             <!--PASSWORD-->
             <label for="password">Password</label>
-            <input type="password" placeholder="Enter password">
+            <input class="form-control type="password" placeholder="Enter password">
 
-            <input type="submit" value="Log In">
+            <input class="btn btn-outline-secondary" type="submit" value="Log In">
 
             <a href="#">Lost your password</a>
             <a href="#">Don't have an account</a>
