--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,13 @@
     <div class="login">
         <img class="avatar" src="img/logo.png" alt="logo">
         <h1>Login Here</h1>
-        <form>
+        <form >
             <!--USERNAME-->
-            <label for="username">Username</label>
-            <input class="form-control" type="text" placeholder="Enter Username">
-
+            <div class="username">
+                <label for="username">Username</label>
+                <input class="form-control" type="text" placeholder="Enter Username">                
+            </div>
+            
             <!--PASSWORD-->
             <label for="password">Password</label>
             <input class="form-control type="password" placeholder="Enter password">
