--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,7 +23,7 @@
                 <span class="input-group-text" id="basic-addon1">
                     <i class="bi bi-person"></i>
                 </span>
-                <input type="text" class="form-control" placeholder="Correo" aria-label="Correo" aria-describedby="basic-addon1" required>
+                <input type="text" class="form-control" placeholder="Nombre de Usuario" aria-label="Nombre de Usuario" aria-describedby="basic-addon1" required>
             </div>
 
             <div class="input-group mb-3">
@@ -44,7 +44,17 @@
             </div>
         </form>
     </div>
-
+    <footer>
+      <div class="footer-name">
+        <h2>Goza Finanzas</h2>
+      </div>
+      <div class="footer-rights">
+				<p>&#169; 2022 Goza Finanzas. Todos los derechos reservados</p>
+			</div>
+			<div class="footer-terms">
+				<p><a href="https://www.google.com">Terminos y Condiciones</a></p>
+			</div>
+    </footer>
 </body>
 
 </html>
