Casi Finish Login and Register

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -46,7 +46,7 @@
     </div>
     <footer>
       <div class="footer-name">
-        <h2>Goza Finanzas</h2>
+        <p>Goza Finanzas</p>
       </div>
       <div class="footer-rights">
 				<p>&#169; 2022 Goza Finanzas. Todos los derechos reservados</p>
