--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -66,7 +66,7 @@
                 <div class="remember">
                     <p>Al registrarte, aceptas nuestras Condiciones de uso y Políticas de privacidad.</p>
                 </div>
-                <input class="btn btn-success" type="submit" value="Iniciar Sesión">
+                <input class="btn btn-success" type="submit" value="Registrarse">
 
                 <div class="register">
                     <strong>¿Tienes una cuenta?</strong> <a href="login.html">Ingresa</a>
@@ -75,7 +75,7 @@
         </div>
       <footer>
         <div class="footer-name">
-          <h2>Goza Finanzas</h2>
+            <p>Goza Finanzas</p>
         </div>
         <div class="footer-rights">
                   <p>&#169; 2022 Goza Finanzas. Todos los derechos reservados</p>
