--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -9,30 +9,49 @@
         <title>Registro - GozaFinanzas</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/stilitos.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     </head>
     <body>
-			<div class="contenedor">
-				<div class="uno">
-					<nav>
-						holi
-					</nav>
+			<nav class="navbar navbar-expand-lg bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#">Navbar</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="#">Perfil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Movimientos</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Consejos Financieros</a>
+							</li>
+							<li class="nav-item">
+								<li class="nav-item">
+								<a class="nav-link active bi bi-box-arrow-right" aria-current="page" href="#">
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<div class="dos">
-					dos
-				</div>
+			</nav>
+			<div class="contenido">
+				
 			</div>
       <footer>
         <div class="footer-name">
-            <p>Goza Finanzas</p>
+          <p>Goza Finanzas</p>
         </div>
         <div class="footer-rights">
-                  <p>&#169; 2022 Goza Finanzas. Todos los derechos reservados</p>
-              </div>
-              <div class="footer-terms">
-                  <p><a href="https://www.google.com">Terminos y Condiciones</a></p>
-              </div>
+              <p>&#169; 2022 Goza Finanzas. Todos los derechos reservados</p>
+          </div>
+          <div class="footer-terms">
+              <p><a href="https://www.google.com">Terminos y Condiciones</a></p>
+          </div>
       </footer>
     </body> 
 </html>
