--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,25 +4,41 @@
     <meta charset="UTF-8">
     <title>Login Juansubas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
 <body>
+    <main class="main-container">
     <div class="login">
         <img class="avatar" src="img/logo.png" alt="logo">
-        <h1>Login Here</h1>
-        <form>
+        <h1 class="bienvenido">Bienvenido</h1>
+        <form >
             <!--USERNAME-->
-            <label for="username">Username</label>
-            <input type="text" placeholder="Enter Username">
-
+            <div class="username">
+                <label for="username">Inicia sesion</label>
+                <input class="form-control" type="text" placeholder="Username">                
+            </div>
+            
             <!--PASSWORD-->
-            <label for="password">Password</label>
-            <input type="password" placeholder="Enter password">
+          
+            <input class="form-control" type="password" placeholder="Password">
 
-            <input type="submit" value="Log In">
+            <a class="btn btn-primary" href="#" role="button">Login</a>
 
-            <a href="#">Lost your password</a>
-            <a href="#">Don't have an account</a>
+            <a class= link href="#">Registrate</a>
         </form>
     </div>
+</main>
+    <footer>
+        <h2 style="font-size: 30px" class="smileTask">
+          Goza Finanzas
+          <span style="font-size: 15px; margin-left: 550px"
+            >© 2022 Todos los derechos reservados.</span
+          >
+          <span style="font-size: 17px; margin-left: 450px"
+            >Terminos y condiciones Política de privacidad</span
+          >
+        </h2>
+      </footer>
 </body>
 </html>
