--- a/frontend/movimientos.html
+++ b/frontend/movimientos.html
@@ -8,10 +8,11 @@
     <!--Activa compatibilidad con navegadores viejos-->
     <meta hhtp-equiv="X-UA-Compatible" content="ie-edge">
     <title>Dashboard - GozaFinanzas</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/np    m/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!--JQUERY-->
     <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -51,21 +52,19 @@
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
+					<div class="collapse navbar-collapse" id="GozaFinanzas">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="#">Perfil</a>
+								<a class="nav-link" href="./perfil.html">Perfil</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Movimientos</a>
+								<a class="nav-link" href="./movimientos.html">Movimientos</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Consejos Financieros</a>
+								<a class="nav-link" href="./consejos.html">Consejos</a>
 							</li>
 							<li class="nav-item">
-								<li class="nav-item">
-								<a class="nav-link active bi bi-box-arrow-right" aria-current="page" href="#">
-								</a>
+								<a class="nav-link bi bi-box-arrow-right" href="./login.html"></a>
 							</li>
 						</ul>
 					</div>
