--- a/frontend/inicio.html
+++ b/frontend/inicio.html
@@ -17,10 +17,10 @@
     <!--inicio nav / barra de navegación-->
 			<nav class="navbar navbar-expand-lg bg-light">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#">Navbar</a>
+					<a class="navbar-brand" href="./inicio.html">GozaFinanzas</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
-					</button>
+					</button> 
 					<div class="collapse navbar-collapse" id="GozaFinanzas">
 						<ul class="navbar-nav">
 							<li class="nav-item">
@@ -39,6 +39,19 @@
 					</div>
 				</div>
 			</nav>
+        <section class="section">
+          <div class="izquierda">
+            <h2 class="titulo-principal">¿Qué es GozaFinanzas?</h2>
+            <p class="descripcion">
+              <strong>
+                Es un sitio web desarrollado con el proposito de ayudarte a gestionar tus finanzas personales de una forma simple pero efectiva, buscando el mayor bienestar posible a la economía del ciudadano común.
+              </strong>
+            </p>
+          </div>
+          <div class="derecha">
+            <img src="./img/finanzas.jpg" alt="imagen-finanzas">
+          </div>
+        </section>
       <!--Fin nav / barra de navegación-->
       <div>
       </div>
