--- a/frontend/consejos.html
+++ b/frontend/consejos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" conten="width=device-width, initial-scale=1.0">
     <!--Activa compatibilidad con navegadores viejos-->
     <meta hhtp-equiv="X-UA-Compatible" content="ie-edge">
-    <title>Consejos - GozaFinanzas</title>
+    <title>Inicio - GozaFinanzas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +20,7 @@
 					<a class="navbar-brand" href="./inicio.html">GozaFinanzas</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
-					</button>
+					</button> 
 					<div class="collapse navbar-collapse" id="GozaFinanzas">
 						<ul class="navbar-nav">
 							<li class="nav-item">
@@ -39,6 +39,23 @@
 					</div>
 				</div>
 			</nav>
+        <section class="section-finanzas">
+          <div class="caja-finanzas-texto">
+            <h2 class="titulo-finanzas">Importancia de las finanzas</h2>
+            <p class="descripcion-finanzas">
+              <strong>
+                Al tener mayor información sobre finanzas personales permite tomar mejores decisiones siendo acertadas.<br><br> 
+                Permitiendo tener menos preocupaciones tales como el estrés, lo cual se sabe es la causante de que se deteriore la salud de las personas tanto en lo mental como en lo físico.
+              </strong>
+            </p>
+          </div>
+          <div class="videos-finanzas">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0J_n437TH80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ScVcQDtFD3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/BYClrGOQirA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>
       <!--Fin nav / barra de navegación-->
       <div>
       </div>
