--- a/frontend/consejos.html
+++ b/frontend/consejos.html
@@ -24,7 +24,7 @@
 					<div class="collapse navbar-collapse" id="GozaFinanzas">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="./perfil.html">Perfil</a>
+								<a class="nav-link" href="./perfil.html">Perfiles</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="./movimientos.html">Movimientos</a>
