--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -15,7 +15,7 @@
     <body>
         <main class="main-container-registro">
         <div class="login-registro">
-            <img class="avatar-registro" src="img/2.png" alt="logo">
+            <img class="avatar-registro" src="img/logo.png" alt="logo">
             <h1 class="registrate">Registrate</h1>
             <form >
                 <!--USERNAME-->
@@ -31,7 +31,7 @@
     
                 <a class="btn btn-primary" href="#" role="button">Registrar</a>
                 <span class="tienes-cuenta">¿Tienes una cuenta?</span>
-                <a class= link href="#"> Ingresa</a>
+                <a class= link href="./login.html"> Ingresa</a>
             </form>
         </div>
     </main>
