--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,7 +16,7 @@
     <body>
         <main class="main-container">
         <div class="login">
-            <img class="avatar" src="img/2.png" alt="logo">
+            <img class="avatar" src="img/logo.png" alt="logo">
             <h1 class="bienvenido">Bienvenido</h1>
             <form >
                 <!--USERNAME-->
@@ -31,7 +31,7 @@
     
                 <a class="btn btn-primary" href="#" role="button">Login</a>
     
-                <a class= link href="#">Registrate</a>
+                <a class= link href="./registro.html">Registrate</a>
             </form>
         </div>
     </main>
